# music-timer

./: Cargo.toml  README.md
examples/: event_performance.rs
src/: lib.rs  music_time.rs  music_time_counter.rs  music_timer_engine.rs  time_signature.rs
tests/: lib_interface.rs  time_drift.rs
