[package]
name = "music-timer"
version = "0.1.1"
authors = ["cj <cj>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = ""
documentation = ""
homepage = ""
description = """
music-timer is a crate with music time and counting utilities featuring a callback performance engine to help with triggering events in music time. Written in Rust.
"""
keywords = ["music", "time", "state", "trigger"]
categories = ["date and time", "multimedia::audio"]
autobenches = true

[dependencies]
